Moving the sample from src/samples to /sample.
Bug: b/24939095
Change-Id: I71cdf776c122d0324eaa0e2f2cd15fddfc9b8476
Tested: Tested by building/running on Mac and Android.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -232,5 +232,5 @@ if (entity_build_component_library)
 endif()  # entity_build_component_library
 
 if(entity_build_samples)
-  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/samples)
+  add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sample)
 endif()
