Fixing CORGI not building the sample.
Change-Id: I765b093c2d936b897b2f7501d2ce1c92bd9c3aa6
Tested: Tested on Ubuntu in both file layouts.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -221,6 +221,6 @@ if (corgi_build_component_library)
   restore_compiler_flags()
 endif()  # corgi_build_component_library
 
-if(entity_build_samples)
+if(corgi_build_samples)
   add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sample)
 endif()
