Don't always build tests by default.
When not doing a standalone build, don't build tests by default.

Tested on Linux.

Change-Id: I2e1fd69d1cd07ed1f7efee89db4351cdf670a041

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,8 @@ option(corgi_build_samples "Build the corgi sample executables."
        ${corgi_standalone_mode})
 
 # Option to enable / disable the test build.
-option(corgi_build_tests "Build tests for this project." ON)
+option(corgi_build_tests "Build tests for this project."
+       ${corgi_standalone_mode})
 
 # Compile the game with the debug flag
 set(corgi_DEBUG ON)
