Updating generated include directory.
Tested on Linux.

Change-Id: Iaaaf21a751b83137ad6a88e104f5cd7deb87ab8c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,7 +133,7 @@ if (corgi_build_component_library)
   endif()
 
   set(CORGI_COMPONENT_LIBRARY_FLATBUFFERS_GENERATED_INCLUDES_DIR
-      ${CORGI_COMPONENT_LIBRARY_DIR}/${CMAKE_FILES_DIRECTORY}/include)
+      ${CMAKE_SOURCE_DIR}/${CMAKE_FILES_DIRECTORY}/include/component_library)
   file(GLOB_RECURSE
        CORGI_COMPONENT_LIBRARY_FLATBUFFERS_SCHEMAS
        ${CORGI_COMPONENT_LIBRARY_DIR}/schemas/*.fbs)
