Fixes for windows
Made a handful of minor changes to ensure that the project compiles on
Windows using Visual Studio.

Tested on Windows and Linux.

Change-Id: I55fff425d1e8f0da6d5278d15178a01a3ad86917

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -167,7 +167,7 @@ if (corgi_build_component_library)
     set(BUILD_BULLET3 OFF CACHE BOOL "")
     set(BUILD_EXTRAS OFF CACHE BOOL "")
     set(BUILD_UNIT_TESTS OFF CACHE BOOL "")
-    set(USE_MSVC_RUNTIME_LIBRARY_DLL ON)
+    set(USE_MSVC_RUNTIME_LIBRARY_DLL ON CACHE BOOL "")
     add_subdirectory("${dependencies_bulletphysics_distr_dir}"
                      ${tmp_dir}/bulletphysics)
     restore_compiler_flags()
