Suppress warnings in gtest build. PiperOrigin-RevId: 145807190 Change-Id: I9ce3b7aa9134cf94f7263467c579a3085fcff23b

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,7 +198,9 @@ option(
 if(corgi_build_tests)
   set(GUNIT_INCDIR "${dependencies_gtest_dir}/include")
   set(GTEST_LIBDIR "${dependencies_gtest_dir}")
+  set_compiler_flags_for_external_libraries()
   add_subdirectory("${dependencies_gtest_dir}" ${tmp_dir}/googletest)
+  restore_compiler_flags()
 
   include(${GTEST_LIBDIR}/cmake/internal_utils.cmake)
   config_compiler_and_linker()
