Fix Visual Studio warnings with FPL libraries.
FPL libraries and Zooshi now compile without warnings
on Visual Studio 2010 and 2015. Note that Zooshi does not
link on VS2010 because the Firebase C++ SDK only comes with
libs for VS2015 at the moment (see b/35421579).
PiperOrigin-RevId: 147723846
Change-Id: I7042ae6fbe51a51b3b289bc6e1a0fd61a1dbd8b5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,9 +138,12 @@ if (corgi_build_component_library)
       ${CORGI_COMPONENT_LIBRARY_DIR}/include/corgi_component_library)
   set(corgi_component_library_SRCS
       ${CORGI_COMPONENT_LIBRARY_INCLUDE_DIR}/animation.h
+      ${CORGI_COMPONENT_LIBRARY_INCLUDE_DIR}/bullet_physics.h
       ${CORGI_COMPONENT_LIBRARY_INCLUDE_DIR}/camera_interface.h
       ${CORGI_COMPONENT_LIBRARY_INCLUDE_DIR}/common_services.h
       ${CORGI_COMPONENT_LIBRARY_INCLUDE_DIR}/component_utils.h
+      ${CORGI_COMPONENT_LIBRARY_INCLUDE_DIR}/default_entity_factory.h
+      ${CORGI_COMPONENT_LIBRARY_INCLUDE_DIR}/default_entity_factory.inc
       ${CORGI_COMPONENT_LIBRARY_INCLUDE_DIR}/entity_factory.h
       ${CORGI_COMPONENT_LIBRARY_INCLUDE_DIR}/graph.h
       ${CORGI_COMPONENT_LIBRARY_INCLUDE_DIR}/meta.h
@@ -170,6 +173,9 @@ if (corgi_build_component_library)
   include_directories(${dependencies_fplutil_dir}/libfplutil/include)
   include_directories(${dependencies_motive_dir}/include)
   include_directories(${dependencies_mathfu_dir}/include)
+  if(WIN32)
+    include_directories(${dependencies_fplbase_dir}/external/include)
+  endif()
 
   set_compiler_flags_for_external_libraries()
   add_library(corgi_component_library ${corgi_component_library_SRCS})
